--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,5 +12,13 @@
 
     <!-- Insert Your Form Below -->
 
+    <form method="Post" action="/food">
+      <p>Your Name: <input type="text" name="name"></p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+      <input type="submit">
+
+
+    </form>
+
   </body>
 </html>
