--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,5 +12,11 @@
 
     <!-- Insert Your Form Below -->
 
+    <form method=POST action='/food'>
+    <p>Your Name: <input name=name type="text"></p>
+    <p>Your Favorite Food: <input name=favorite_food type="text"></p>
+    <input type="submit">
+    </form>
+
   </body>
 </html>
