--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,6 +11,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method="POST" action="/food">
+      <p>Your name: <input type="text" name="name"></p>
+      <p>Your favorite food: <input name="favorite_food" type="text"></p>
+      <input type="submit">
+    </form>
 
   </body>
 </html>
