--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <title>Food</title>
   </head>
- 
+
   <body>
-    
+
     <h1>Favorite Foods</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
+    <form action="/food" method="post">
+    	<p>Your Name: <input name="name" type="text"></p>
+    	<p>Your Favorite Food: <input name="favorite_food" type="text"></p>
+    	<input type="submit" value="Submit">
+    </form>
 
   </body>
 </html>
