--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,6 +11,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method="post" action="/food">
+      <input type="text" name="name">
+      <input type="text" name="favorite_food">
+      <input type="submit" value="Submit">
+    </form>
 
   </body>
 </html>
