--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,6 +11,13 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form action="/food" method=POST>
+    <label for="name">Name</label>
+	<input type="text" name="name" id="name">
+	<label for="favorite_food">Favorite Food</label>
+	<input type="text" name="favorite_food" id="favorite_food">
+    <input type="submit">
+    </form>
 
   </body>
 </html>
