--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>Food</title>
   </head>
- 
+
   <body>
-    
+
     <h1>Favorite Foods</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
-
     <!-- Insert Your Form Below -->
-
+    <form function="POST" action="/food"> <!--Tells the form what kind of request should be sent to server upon submission; action att tells form the route.-->
+      <p>Your Name:<input type="text" name="name"></p>
+      <p>Your Favorite Food:<input type="text" name="favorite_food"></p>
+      <input type="submit">
+    </form>
   </body>
 </html>
