--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <title>Food</title>
   </head>
- 
+
   <body>
-    
+
     <h1>Favorite Foods</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method = post action = "/food">
+      name:    <input type = text name= name>
+      <br>
+      Favorite food :<input type = text name = favorite_food>
+      <br>
+      <input type=submit value = submit>
+    </form>
 
   </body>
 </html>
