--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -8,8 +8,18 @@
   <body>
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
-
-    <!-- Insert Your Form Below -->
-
+    <div>
+      <form action="/food" method="POST">
+        <p>
+          <label for="name"> Your Name: </label>
+          <input type="text" name="name" id="name">
+        </p>
+        <p>
+          <label for="favorite_food"> Your Favorite Food: </label>
+          <input type="text" name="favorite_food" id="favorite_food">
+        </p>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </body>
 </html>
