--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,18 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    <form action="/food" method="POST">
+      <label for="name">Name:</label>
+      <p>
+        <input type="text" id="name" name="name"/>
+      </p>
+      <label for="favorite_food">Favorite Food:</label>
+      <p>
+        <input type="text" id="favorite_food" name="favorite_food" />
+      </p>
+      <p>
+        <input type="submit" value="Submit" />
+      </p>
+    </form>
   </body>
 </html>
