--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,13 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form action="/food" method="post">
+      <label for="user_name">Your Name:</label>
+        <p> <input type="text" name="name" id="user_name" placeholder=" Enter Your Name !! "> </p>
+      <label for="favorite_food">Favorite Food:</label>
+        <p> <input type="text" name="favorite_food" id="favorite_food" placeholder="Favorite Food!!"></p>
+          <input type="submit"  value="submit">
+    </form>
 
   </body>
 </html>
