--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -1,6 +1,11 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {text-align:center; font-family: helvetica; margin-top: 20%;}
+    </style>
     <meta charset="UTF-8">
     <title>Favorite Food</title>
   </head>
@@ -10,6 +15,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method="POST" action="/food">
+      <p>Your Name: <input type="text" name = "name"></p>
+      <p>Your Favorite Food: <input type="text" name = "favorite_food"></p>
+      <input type="submit">
+    </form>
 
   </body>
 </html>
