--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,5 +11,12 @@
 
     <!-- Insert Your Form Below -->
 
+
+    <form method="POST" action="/food">
+      <p>Your Name: <input type="text" name="name" id="name"/> </p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food" id="favorite_food"/></p>
+      <input type="submit">
+
+    </form>
   </body>
 </html>
