--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,15 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form action='/food' method='post'>
+      <label for="name">Name: </label>
 
+      <input type="text" name="name" />
+      <br/>
+      <label for="favorite_food">Favorite Food: </label>
+      <input type="text" name="favorite_food" />
+      <br/>
+      <input type="submit" name="submit" value="Submit" />
+    </form>
   </body>
 </html>
