--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -9,7 +9,14 @@
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
+    <form method="POST" action="/food">
+    	<!-- Method attribute tells the form what kind of request should be fired to the server when the submit button is clicked. In general, forms use POST request, because it is 'posting' data to the server -->
+    	<!-- Action attribute tells the form what specific route the post request should be sent to. In this case, we're posting to a route called /food-->
+    	
+    	<p>Your Name: <input type="text" name="name"></p>
+    	<p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+    	<input type="submit" value="Submit">
+    </form>
 
   </body>
 </html>
