--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method="POST" action="/food">
+      <p><label for="name">Your Name: </label><input type="text" name="name" value="" id="name"></p>
+      <p><label for="favorite_food">Your Favorite Food: </label><input type="text" name="favorite_food" value="" id="favorite_food"></p>
+      <input type="submit" name="" value="Submit">
+    </form>
 
   </body>
 </html>
