--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -9,7 +9,10 @@
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
-
+    <form class="" action="/food" method="POST">
+      <p>Your Name: <input type="text" name="name" value="First Name"></p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food" value="Enter Favorite Food">
+      <input type="submit" name="" value="Submit">
+    </form>
   </body>
 </html>
