--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -9,7 +9,12 @@
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
+   <form method="POST" action="/food">
+    <p>Your Name: <input type="text" name="name"></p>
+    <!-- The name attribute of an <input> tag responds to a key in the params hash for that data-->
+    <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+    <input type="submit">
+  </form>
 
   </body>
 </html>
