--- a/views/food.erb
+++ b/views/food.erb
@@ -1,1 +1,1 @@
-<%= "My name is #{@name}, and I love #{@favorite_food}" %>
+<%= "My name is #{params[:name]}, and I love #{params[:favorite_food]}" %>
