--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,12 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form action="/food" method="post">
+      <p><label for="name">Name</label> <input type="text" name="name" placeholder="Your Name"></p>
 
+      <p><label for="favorite_food">Fave food</label> <input type="text" name="favorite_food" placeholder="Your Fave Food"></p>
+
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
