--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,5 +11,11 @@
 
     <!-- Insert Your Form Below -->
 
+    <form method="post" action="/food">
+      <p>Your name: <input type="text" name="name"></p>
+      <p>Your favorite food: <input type="text" name="favorite_food"></p>
+      <input type="submit">
+    </form>
+
   </body>
 </html>
