--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -9,7 +9,13 @@
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
+      <form class="form" action="/food_form" method="post">
+        <label for="Name">Name:</label>
+        <input type="text" name="name" value="name">
+        <label for="favorite_food"> Favorite Food</label>
+        <input type="text" name="favorite_food" value="favorite_food">
+        <input type="submit" value="Submit">
+      </form>
 
   </body>
 </html>
