--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,12 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    <form action="/food" method="POST">
+      <label for "name">Your Name:</label>
+      <input type="text" name="name">
+      <label for "favorite_food">Favorite Food:</label>
+      <input type="text" name="favorite_food" />
+      <input type="submit" name="Submit" />
+    </form>
   </body>
 </html>
