--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    <form action="/food" method="POST">
+      <p>NAME:<input type="text" name="name" id="" /></p>
+      <p>FAVORITE FOOD:<input type="text" name="favorite_food" id="" /></p>
+      
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
