--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -9,7 +9,11 @@
     <h1>Favorite Food</h1>
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
-    <!-- Insert Your Form Below -->
+    <form class="" action="/food" method="post">
+      <p><label for="name">Name: </label><input type="text" id="name" name="name" value=""></p>
+      <p><label for="favorite_food">Favorite Food: </label><input type="text" id="favorite_food" name="favorite_food" value=""></p>
+      <input type="submit" name="" value="Submit">
+    </form>
 
   </body>
 </html>
