--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,13 +11,11 @@
 
     <!-- Insert Your Form Below -->
     <form method="POST" action="/food">
+      <!-- <form method="POST" action="/name"> -->
       <p>Your Name: <input type="text"></p>
       <p>Your Favorite Food: <input type="text"></p>
       <input type="submit">
     </form>
-
-
-
 
   </body>
 </html>
