--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,9 +10,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-    <form>
-      <p>Your Name: <input type="text"></p>
-      <p>Your Favorite Food <input type="text"></p>
+    <form method="POST" action="/food">
+      <!-- method attribute tells form what kind of request should be fired to the server when submit button is clicked -->
+      <!-- action attribute tells form what specific route the post request should be sent to-->
+      <p>Your Name: <input type="text" name="name"></p>
+      <p>Your Favorite Food <input type="text" name="favorite_food"></p>
       <input type="submit">
     </form>
   </body>
