--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,11 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    <form method="POST" action="/food">
+      <p>Your Name:</p><input type="text" name="name">
+      <p>Your Favorite Food:</p><input type="text" name="favorite_food">
+      <br>
+      <input type="submit">
+    </form>
   </body>
 </html>
