--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,16 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    
+    <form>
+      <!-- This at first is what I thought was needed:
+      <p><input type="text" name="name"></input></p>
+      <p><input type="text" name="favorite-food"></input></p> -->
+      
+      <!-- Here's what's really needed: -->
+      <p>Your Name: <input type="text" /></p>
+      <p>Your Favorite Food: <input type="text" /></p>
+      <input type="submit" />
+    </form>
   </body>
 </html>
