--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,7 +11,7 @@
 
     <!-- Insert Your Form Below -->
     
-    <form>
+    <form method="POST" action="/food">
       <!-- This at first is what I thought was needed:
       <p><input type="text" name="name"></input></p>
       <p><input type="text" name="favorite-food"></input></p> -->
