--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,7 +12,7 @@
     <!-- Insert Your Form Below -->
     
     <form method="POST" action="/food">
-      <!-- This at first is what I thought was needed:
+      <!-- This is what I thought was needed at first:
       <p><input type="text" name="name"></input></p>
       <p><input type="text" name="favorite-food"></input></p> -->
       
