--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -16,9 +16,9 @@
       <p><input type="text" name="name"></input></p>
       <p><input type="text" name="favorite-food"></input></p> -->
       
-      <!-- Here's what's really needed: -->
-      <p>Your Name: <input type="text" /></p>
-      <p>Your Favorite Food: <input type="text" /></p>
+      <!-- Here's what's really needed (I was close!): -->
+      <p>Your Name: <input type="text" name="name" /></p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food" /></p>
       <input type="submit" />
     </form>
   </body>
